# ai-demo

./: LICENSE  README.md
doc/: V0.1.1版本提测(人脸质量评测).xlsx  人脸表情识别开发笔记.docx  人脸识别RestAPI接口说明.docx  人脸识别SocketAPI接口说明.docx  人脸质量测评RestAPI接口说明.docx  人脸质量测评SocketAPI接口说明.docx  人脸质量测评指标说明.docx  人脸质量评测v0.1.1冒烟测试用例.xlsx  跨线检测RestAPI接口说明.docx  跨线检测SocketAPI接口说明.docx
face_id/: CMakeLists.txt  readme.txt  setup.sh  user_db.sh
face_id/conf/: face_id.xml
face_id/doc/: 人脸识别Socket API.docx  类图.vsdx
face_id/src/: codecs.cpp  codecs.h  common.h  conf_mgt.cpp  face_aligner.cpp  face_aligner.h  face_detector.cpp  face_detector.h  face_handler.h  face_handler_mgt.cpp  face_handler_mgt.h  face_recognizer.h  facenet_recognizer.cpp  insightface_recognizer.cpp  main.cpp  msg_oper.cpp  msg_oper.h  protocol.cpp  protocol.h  req_processor.cpp  req_processor.h  req_tcp_event_handler.cpp  req_tcp_event_handler.h  timing.h  user_mgt.h
face_id/src/test/: cli.cpp  realtime_tester.py
face_id/src/tools/: curve_plot.py  face_crop_tool.cpp  face_get_feature.cpp
face_quality/: CMakeLists.txt  build.sh  readme.txt  setup.sh
face_quality/conf/: face_quality.xml
face_quality/include/detect/classifier/: lab_boosted_classifier.h
face_quality/include/evergrande/: fq_codecs.h  fq_common.h  fq_conf_mgt.h  fq_detector.h  fq_detector_mgt.h  fq_emotion.h  fq_json.h  fq_msg.h  fq_msg_oper.h  fq_occlusion.h  fq_quality.h  fq_req_mgt.h  fq_req_processor.h  fq_req_tcp_event_handler.h  fq_request.h
face_quality/include/rcr/: helpers.hpp
face_quality/model/: download.txt
face_quality/src/detect/: fust.cpp
face_quality/src/evergrande/: fq_codecs.cpp  fq_conf_mgt.cpp  fq_detector.cpp  fq_detector_mgt.cpp  fq_emotion.cpp  fq_json.cpp  fq_msg_oper.cpp  fq_occlusion.cpp  fq_quality.cpp  fq_req_mgt.cpp  fq_req_processor.cpp  fq_req_tcp_event_handler.cpp  fq_request.cpp  fq_srv.sh  main.cpp
face_quality/src/evergrande/python/: CalcScore.py  fer_train.py  fod_train.py  gen_pb_model.py
face_quality/src/evergrande/test/: base64_mat_test.cpp  fq_cli.cpp  fq_srv.cpp  fq_test.cpp
face_quality/src/evergrande/tools/: head_pose.cpp  tree_engine.cpp
javacode/: .project  pom.xml  shut_fq.sh  start_fq.sh
javacode/src/main/java/com/company/project/configurer/: WebMvcConfigurer.java
javacode/src/main/java/com/company/project/test/: DITestClient.java  DITestServer.java  ReceiveClient.java
javacode/src/main/java/com/company/project/util/: NumberUtil.java  ScheduledExecutorUtil.java
javacode/src/main/java/com/company/project/web/: FileUploadController.java  VideoCrossData.java
javacode/src/main/resources/: application-dev.properties  application-prod.properties
javacode/src/test/java/: CodeGenerator.java
obj_detect/: CMakeLists.txt  build.sh  readme.txt
obj_detect/conf/: img_object_detect.xml  object_detect.xml
obj_detect/model/: download.txt
obj_detect/src/: codecs.cpp  codecs.h  common.h  conf_mgt.cpp  conf_mgt.h  detector_mgt.cpp  detector_mgt.h  main.cpp  obj_detector.cpp  obj_detector.h  protocol.cpp  protocol.h  req_mgt.cpp  req_mgt.h  req_processor.cpp  req_processor.h  req_tcp_event_handler.cpp  request.cpp  request.h  start_stop_srv.sh  timing.h
obj_detect/src/test/: cli.cpp
obj_detect/src/tools/: object_detect_demo.cpp
web/: index.html  script.js
web/face-detect/: index.html  script.js  style.css  upload.html
web/face-register/: index.html  script.js  style.css
web/obj-detect/: crossing.html  crossing.js  index.html  script.js  style.css  video.js
